# p

./: CMakeLists.txt  mainwindow.qss
include/: LoadFileQss.h  centereditemdelegate.h  imagelabel.h  mainwindow.h  musicplay.h  musicplayerthread.h  musicsql.h  songsinfo.h
sources/: res.qrc
sources/qss/: mainwindow.qss
src/: mainwindow.cpp  musicplay.cpp  musicplayerthread.cpp  musicsql.cpp  songsinfo.cpp
src/froms/: mainwindow.ui
